--- a/css/style.css
+++ b/css/style.css
@@ -467,6 +467,10 @@ clip-path: circle();
 ============================ */
 
 footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
 	text-align: center;
 	padding: 1%;
 }
